Excluded commons-logging

--- a/pom.xml
+++ b/pom.xml
@@ -703,6 +703,12 @@
                 <artifactId>httpclient</artifactId>
                 <version>${httpclient.version}</version>
                 <scope>test</scope>
+                <exclusions>
+                    <exclusion>
+                        <groupId>commons-logging</groupId>
+                        <artifactId>commons-logging</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
