--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
   #L%
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
@@ -238,8 +238,6 @@
                                     <usedDependency>com.h2database:h2</usedDependency>
                                     <usedDependency>com.mattbertolini:liquibase-slf4j</usedDependency>
                                     <usedDependency>com.mchange:c3p0</usedDependency>
-                                    <usedDependency>info.cukes:gherkin</usedDependency>
-                                    <usedDependency>info.cukes:cucumber-html</usedDependency>
                                     <usedDependency>info.cukes:cucumber-spring</usedDependency>
                                     <usedDependency>javax.servlet:jstl</usedDependency>
                                     <usedDependency>org.apache.tiles:tiles-jsp</usedDependency>
@@ -397,12 +395,12 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
-                        <configuration>
-                            <systemProperties>
-                                <fixture.service.smtp.port>${subethamail.smtp.port}</fixture.service.smtp.port>
-                                <fixture.service.registration.baseUrl>http://localhost:${tomcat.http.port}/fixture</fixture.service.registration.baseUrl>
-                            </systemProperties>
-                        </configuration>
+                    <configuration>
+                        <systemProperties>
+                            <fixture.service.smtp.port>${subethamail.smtp.port}</fixture.service.smtp.port>
+                            <fixture.service.registration.baseUrl>http://localhost:${tomcat.http.port}/fixture</fixture.service.registration.baseUrl>
+                        </systemProperties>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -592,6 +590,16 @@
                 <version>${commons-io.version}</version>
             </dependency>
             <dependency>
+                <groupId>com.github.jnr</groupId>
+                <artifactId>jnr-constants</artifactId>
+                <version>${jnr-constants.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.jnr</groupId>
+                <artifactId>jnr-ffi</artifactId>
+                <version>${jnr-ffi.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>com.google.code.maven-play-plugin.com.jamonapi</groupId>
                 <artifactId>jamon</artifactId>
                 <version>${jamon.version}</version>
@@ -601,6 +609,11 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protobuf-java</artifactId>
+                <version>${protobuf-java.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.h2database</groupId>
@@ -628,12 +641,6 @@
             </dependency>
             <dependency>
                 <groupId>info.cukes</groupId>
-                <artifactId>cucumber-html</artifactId>
-                <version>${cucumber-html.version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>info.cukes</groupId>
                 <artifactId>cucumber-java</artifactId>
                 <version>${cucumber.version}</version>
                 <scope>test</scope>
@@ -648,12 +655,6 @@
                 <groupId>info.cukes</groupId>
                 <artifactId>cucumber-spring</artifactId>
                 <version>${cucumber.version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>info.cukes</groupId>
-                <artifactId>gherkin</artifactId>
-                <version>${gherkin.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -768,6 +769,16 @@
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-stdlib</artifactId>
                 <version>${kotlin.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jruby.jcodings</groupId>
+                <artifactId>jcodings</artifactId>
+                <version>${jcodings.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>${json.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.liquibase</groupId>
@@ -1018,14 +1029,6 @@
         </dependency>
         <dependency>
             <groupId>info.cukes</groupId>
-            <artifactId>cucumber-html</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>info.cukes</groupId>
-            <artifactId>gherkin</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>info.cukes</groupId>
             <artifactId>cucumber-core</artifactId>
         </dependency>
         <dependency>
@@ -1235,21 +1238,21 @@
 
         <!-- Plugin versions -->
         <build-helper-maven-plugin.version>1.8</build-helper-maven-plugin.version>
-        <kotlin-maven-plugin.version>0.5.1131</kotlin-maven-plugin.version>
+        <kotlin-maven-plugin.version>0.6.1670</kotlin-maven-plugin.version>
         <maven-antrun-plugin.version>1.7</maven-antrun-plugin.version>
         <maven-assembly-plugin.version>2.4</maven-assembly-plugin.version>
         <maven-clean-plugin.version>2.5</maven-clean-plugin.version>
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
         <maven-cucumber-reporting.version>0.0.4</maven-cucumber-reporting.version>
-        <maven-deploy-plugin.version>2.7</maven-deploy-plugin.version>
+        <maven-deploy-plugin.version>2.8</maven-deploy-plugin.version>
         <maven-enforcer-plugin.version>1.3.1</maven-enforcer-plugin.version>
-        <maven-failsafe-plugin.version>2.15</maven-failsafe-plugin.version>
-        <maven-install-plugin.version>2.4</maven-install-plugin.version>
+        <maven-failsafe-plugin.version>2.16</maven-failsafe-plugin.version>
+        <maven-install-plugin.version>2.5</maven-install-plugin.version>
         <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
         <maven-release-plugin.version>2.4.1</maven-release-plugin.version>
         <maven-resources-plugin.version>2.6</maven-resources-plugin.version>
         <maven-site-plugin.version>3.3</maven-site-plugin.version>
-        <maven-surefire-plugin.version>2.15</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
         <maven-war-plugin.version>2.4</maven-war-plugin.version>
         <site-maven-plugin.version>0.8</site-maven-plugin.version>
         <tomcat7-maven-plugin.version>2.1</tomcat7-maven-plugin.version>
@@ -1260,51 +1263,54 @@
         <!-- Dependency versions -->
         <activation.version>1.1.1</activation.version>
         <ant.version>1.9.2</ant.version>
-        <antlr-runtime.version>3.5</antlr-runtime.version>
-        <bootswatch.version>2.3.1</bootswatch.version>
+        <antlr-runtime.version>3.5.1</antlr-runtime.version>
+        <bootswatch.version>3.0.0</bootswatch.version>
         <c3p0.version>0.9.2.1</c3p0.version>
-        <cglib.version>3.0</cglib.version>
+        <cglib.version>3.1</cglib.version>
         <commons-beanutils.version>1.8.3</commons-beanutils.version>
         <commons-io.version>2.4</commons-io.version>
-        <cucumber.version>1.1.3</cucumber.version>
-        <!-- TODO Remove this when cucumber > 1.1.3 -->
-        <cucumber-html.version>0.2.3</cucumber-html.version>
-        <font-awesome.version>3.2.1</font-awesome.version>
-        <guava.version>14.0.1</guava.version>
-        <gherkin.version>2.11.8</gherkin.version>
-        <h2.version>1.3.173</h2.version>
-        <hibernate.version>4.2.3.Final</hibernate.version>
+        <!-- TODO Upgrade when cucumber > 1.1.5 -->
+        <cucumber.version>1.1.4</cucumber.version>
+        <font-awesome.version>4.0.3</font-awesome.version>
+        <guava.version>15.0</guava.version>
+        <h2.version>1.3.174</h2.version>
+        <hibernate.version>4.2.8.Final</hibernate.version>
         <hibernate-jpa-2.0-api.version>1.0.1.Final</hibernate-jpa-2.0-api.version>
         <!-- TODO Bump this when spring supports hibernate-validator:5.0+ -->
         <hibernate-validator.version>4.3.1.Final</hibernate-validator.version>
         <html5shiv.version>3.6.2</html5shiv.version>
-        <httpclient.version>4.2.5</httpclient.version>
+        <httpclient.version>4.3.1</httpclient.version>
         <httpcore.version>4.3</httpcore.version>
         <jamon.version>2.7</jamon.version>
         <jboss-logging.version>3.1.3.GA</jboss-logging.version>
-        <jquery.version>2.0.3</jquery.version>
+        <jquery.version>2.0.3-1</jquery.version>
         <jstl.version>1.2</jstl.version>
         <junit.version>4.11</junit.version>
-        <kotlin.version>0.5.1131</kotlin.version>
-        <liquibase.version>3.0.2</liquibase.version>
-        <liquibase-slf4j.version>1.0.0</liquibase-slf4j.version>
+        <kotlin.version>0.6.1670</kotlin.version>
+        <liquibase.version>3.0.7</liquibase.version>
+        <liquibase-slf4j.version>1.2.1</liquibase-slf4j.version>
         <logback.version>1.0.13</logback.version>
         <mail.version>1.4.7</mail.version>
-        <selenium.version>2.34.0</selenium.version>
+        <protobuf-java.version>2.5.0</protobuf-java.version>
+        <selenium.version>2.38.0</selenium.version>
         <servlet-api.version>3.1.0</servlet-api.version>
         <slf4j.version>1.7.5</slf4j.version>
-        <spring.version>3.2.3.RELEASE</spring.version>
+        <spring.version>3.2.5.RELEASE</spring.version>
         <!-- TODO Find out if this is necessary, and why it's out of sync -->
         <spring-asm.version>3.1.4.RELEASE</spring-asm.version>
-        <spring-data-commons.version>1.5.2.RELEASE</spring-data-commons.version>
-        <spring-data-jpa.version>1.3.4.RELEASE</spring-data-jpa.version>
+        <spring-data-commons.version>1.6.2.RELEASE</spring-data-commons.version>
+        <spring-data-jpa.version>1.4.2.RELEASE</spring-data-jpa.version>
         <spring-data-rest.version>1.0.0.RELEASE</spring-data-rest.version>
         <spring-security.version>3.1.4.RELEASE</spring-security.version>
         <subethasmtp.version>3.1.7</subethasmtp.version>
-        <tiles.version>3.0.1</tiles.version>
+        <tiles.version>3.0.3</tiles.version>
         <validation-api.version>1.1.0.Final</validation-api.version>
         <velocity.version>1.7</velocity.version>
-        <wro4j.version>1.7.0</wro4j.version>
+        <wro4j.version>1.7.2</wro4j.version>
+        <json.version>20131018</json.version>
+        <jnr-ffi.version>1.0.10</jnr-ffi.version>
+        <jnr-constants.version>0.8.5</jnr-constants.version>
+        <jcodings.version>1.0.10</jcodings.version>
     </properties>
 
 </project>
